--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @cats.each do |cat| %>
-    <li><%= cat.name %>    
+    <li><a href="<%= cat_url(cat) %>"><%= cat.name %></a>    
   <% end %>
 </ul>
