--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -1,13 +1,11 @@
-<% male_selected =   (!cat.nil? && cat.sex) == "M" ? "checked" : ""%>
-<% female_selected = (!cat.nil? && cat.sex) == "F" ? "checked" : ""%>
 
 <% if cat.persisted? %>
 <form action="<%=cats_url(cat)%>" method="POST">
-  <input name="_method" type="hidden" value="PATCH" />
+  <input type="hidden" name="_method" value="PATCH" />
 <% else %>
-  <form action="<%=cats_url%>" method="POST">
+<form action="<%=cats_url%>" method="POST">
 <% end %> 
-s 
+
   <label for="cat_name">First name</label>
   <input name="cat[name]" id="cat_name" type="text" value="<%= cat.name %>">
   <br>
@@ -21,14 +19,14 @@ s
            id="cat_sex_m" 
            type="radio" 
            value="m" 
-           <%= male_selected %>
+           <%= (!cat.nil? && cat.sex) == "M" ? "checked" : ""%>
            >
     <label for="cat_sex_m">Male</label>
     <input name="cat[sex]" 
            id="cat_sex_f" 
            type="radio" 
            value="f"
-           <%= female_selected %>
+           <%= (!cat.nil? && cat.sex) == "F" ? "checked" : ""%>
            >
     <label for="cat_sex_f">Female</label>
   <br>
