--- a/app/views/cat_rental_requests/_show.html.erb
+++ b/app/views/cat_rental_requests/_show.html.erb
@@ -3,5 +3,6 @@
   <li><a href="<%= cat_url(cat) %>"><%= cat.name %></a>
   <li><%= request.start_date %>
   <li><%= request.end_date %>
-  <li><a href="<%= cat_rental_request_url(request) %>">Show Request</a>
+  <li><%= request.status %>
+ 
 </ul>
