add some css files

--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -27,5 +27,6 @@
       <% end %>
     <%end%>
 </ul>
-
+<%= link_to "Rent him!", new_cat_rental_request_url  %>
+<br>
 <%= link_to "back to cat list", cats_url  %>
