--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,17 +24,27 @@ body {
   background-attachment: fixed;
 }
 
-h1 {
+h1,h2,h3 {
   text-align: center;
 }
 
 .container {
   height: 100%;
   width: 65%;
-  margin: 0 auto;
-  background-color: rgba(0,0,0,0.5);
-  color: moccasin;
-  padding: 40px;
+  margin: 35% auto;
+  background-color: rgba(0,0,0,0.8);
+  color: peachpuff;
+  border-radius: 5px;
+}
+
+nav {
+  background-color: rgba(0,0,0,0.8);
+  text-align: center;
+  border-radius: 5px;
+}
+
+.content {
+  padding: 40px 80px;
 }
 
 li {
@@ -47,4 +57,24 @@ table {
 
 table, th, td {
     border: 1px solid black;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:link {
+    color: lemonchiffon;
+}
+
+a:visited {
+    color: lemonchiffon;
+}
+
+a:hover {
+    color: pink;
+}
+
+a:active {
+    color: #0000FF;
 }
