--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,12 @@
   <%= javascript_include_tag "application" %>
 </head>
 <body>
+<%= render 'layouts/header' %>
 
 <div class="container">
-  <%= yield %>
+  <div class="content">
+    <%= yield %>
+  </div>
 </div>
 
 </body>
