--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <nav>
-  <%= link_to "all the cats", cats_url %> |
-  <%= link_to "create your acount", '#' %>
-   <%= link_to "register your cat", new_cat_rental_request_url %>
+    <%= link_to "all the cats", cats_url %>
+    | <%= link_to "create your acount", '#' %>
+    | <%= link_to "register your cat", new_cat_rental_request_url %>
   </nav>
 </header>  
