--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @cat.name %></h1>
 
+<img src="http://placekitten.com/300/240" alt="<%= @cat.name %>" />
+
 <p>
   This is <%= @cat.name %>, <%= (@cat.sex == "M") ? "he" : "she" %> is a
   <%= @cat.color %> colored cat, who is <%= @cat.age %> years old.
