--- a/app/views/cat_rental_requests/edit.html.erb
+++ b/app/views/cat_rental_requests/edit.html.erb
@@ -2,6 +2,6 @@
 
 <%= render "form", 
   request: @request, 
-  cats: @cats, 
-  selected_d: @request.cat.id
+  cats: @cats,
+  selected_id: @request.cat.id
 %>
