--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,10 +11,6 @@
  *= require_self
  *= require_tree .
  */
-html {
-  height: 100%;
-}
-
 body {
   height: 100%;
   background-image: url(http://pubpages.unh.edu/~chf34/projectcat.jpg);
@@ -24,27 +20,43 @@ body {
   background-attachment: fixed;
 }
 
-h1,h2,h3 {
-  text-align: center;
-}
-
 .container {
   height: 100%;
   width: 65%;
-  margin: 10% auto;
+  margin: 5% auto 0 auto;
   background-color: rgba(0,0,0,0.8);
   color: peachpuff;
   border-radius: 5px;
 }
 
+.content {
+  height: 100%;
+  padding: 40px 80px;
+}
+
 nav {
   background-color: rgba(0,0,0,0.8);
-  text-align: center;
+  text-align: center;s
   border-radius: 5px;
 }
 
-.content {
-  padding: 40px 80px;
+h1,h2,h3 {
+  text-align: center;
+}
+
+.flash {
+  color: black;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.error {
+  background-color: rgba(200,0,0,0.6);
+}
+
+.notice {
+  background-color: rgba(0,200,0,0.6);
 }
 
 img {
@@ -54,7 +66,9 @@ img {
 }
 
 li {
+  list-style-type: none;
   margin: 10px;
+  display: inline;
 }
 
 table {
