--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,15 @@
 <header>
   <nav>
-    <%= link_to "all the cats", cats_url %>
-    | <%= link_to "create your acount", '#' %>
-    | <%= link_to "register your cat", new_cat_rental_request_url %>
+    <li><%= link_to "all the cats", cats_url %>
+    <li><%= link_to "create your acount", '#' %>
+    <li><%= link_to "register your cat", new_cat_rental_request_url %>
   </nav>
+  
+  <% if !current_user.nil? %>
+    <ul>
+      <li>Logged in as: <%= current_user.username %></li>
+      <li><%= button_to "Logout", session_url, method: :delete %></li>
+    </ul>
+  <% end %>
+
 </header>  
