--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,10 @@
   <%= javascript_include_tag "application" %>
 </head>
 <body>
+  
 <%= render 'layouts/header' %>
+<%= render 'layouts/notices' %>
+<%= render 'layouts/errors' %>
 
 <div class="container">
   <div class="content">
