--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,13 @@
     <li><%= link_to "register your cat", new_cat_rental_request_url %>
   </nav>
   
+  <ul>
   <% if !current_user.nil? %>
-    <ul>
-      <li>Logged in as: <%= current_user.username %></li>
-      <li><%= button_to "Logout", session_url, method: :delete %></li>
-    </ul>
+    <li>Logged in as: <%= current_user.username %></li>
+    <li><%= button_to "Logout", logout_url, method: :delete %></li>
+  <% else %>    
+    <li><%= button_to "Login", login_url, method: :get %></li>
   <% end %>
+  </ul>
 
 </header>  
